# Meadow

./: .gitignore  CMakeLists.txt  Config.h.in  Meadow  MeadowConfig.h.in  cntls  cntls.sh
Source/: Config.h  main.cpp
Source/Util/: Debug-Macros.hpp  DebugCallback.cpp  DebugCallback.hpp  Log.cpp  Log.hpp  ansi.h
Source/Vulkan/: Shaders.cpp  Shaders.hpp  VulkanCommand.cpp  VulkanCommand.hpp  VulkanInstance.cpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanQueueUtils.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
Working/: Meadow  build.sh  main.cpp
Working/Defunct/: ImageViews.cpp  ImageViews.hpp  SwapChain.hpp
Working/Defunct/Drawing/: CommandBuffers.hpp  CommandPool.cpp  CommandPool.hpp  FrameBuffer.hpp
Working/Defunct/Pipeline/: Pipeline.hpp  PipelineConstants.hpp  Shader.hpp  Viewport.hpp
Working/Deprecated/: GraphicsWindow.cpp  GraphicsWindowTotal.hpp
Working/Graphics/: VulkanInstance.cpp  VulkanInstance.hpp
Working/Include/: Application.hpp  Graphics.hpp
Working/Include/Geometry/: Matrix.hpp
Working/Include/Graphics/: Constants.hpp  Environment.hpp  Game.hpp  GraphicsWindow.hpp  Instance.hpp  LogicalDeviceManager.hpp  PhysicalDeviceManager.hpp  QueueUtils.hpp  Surface.hpp  SwapChain.hpp  Window.hpp
Working/Include/Graphics/Environment/: ImageView.hpp  Instance.hpp  PhysicalDeviceManager.hpp  Surface.hpp  SwapChain.hpp  Window.hpp
Working/Include/Graphics/Pipeline/: Pipeline.hpp
Working/Include/Logging/: Logging.hpp
Working/Shaders/: Shader.vert
Working/Source/: Application.cpp  Application.hpp  Geometry.hpp  ansi.h  main.cpp
Working/Source/Debug/: Any.cpp  Any.hpp  Logging.cpp  Logging.hpp  Tracking.cpp  Tracking.hpp
Working/Source/Geometry/: Vector.hpp
Working/Source/Graphics/: GraphicsWindow.cpp  Include.hpp  Instance.cpp  LogicalDeviceManager.cpp  PhysicalDeviceManager.cpp  QueueUtils.cpp  Surface.cpp  SwapChain.cpp  Window.cpp
Working/Source/Graphics/Commands/: CommandPool.cpp  CommandPool.hpp
Working/Source/Graphics/Drawing/: CommandBuffer.cpp  CommandBuffer.hpp  CommandBuffers.hpp  DrawingConstants.hpp  FlyingFrames.hpp  FrameBuffer.cpp
Working/Source/Graphics/Environment/: Constants.hpp  EnvironmentConstants.hpp  GraphicsContext.cpp  GraphicsContext.hpp  ImageView.cpp  ImageView.hpp  ImageViews.hpp  Instance.cpp  Instance.hpp  LogicalDeviceManager.cpp  LogicalDeviceManager.hpp  PhysicalDeviceManager.cpp  QueueUtils.cpp  QueueUtils.hpp  Surface.cpp  Surface.hpp  SwapChain.cpp  SwapChain.hpp  Window.cpp  Window.hpp
Working/Source/Graphics/Frames/: Frames.cpp  Frames.hpp
Working/Source/Graphics/Pipeline/: Constants.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  Shader.cpp  Shader.hpp  Viewport.cpp  Viewport.hpp
Working/Source/Graphics/Swapchain/: RenderPass.cpp  SwapChain.cpp  SwapChain.hpp  Swapchain.cpp  Swapchain.hpp  SwapchainSupportDetails.h
Working/Source/Logging/: Logging.cpp  Logging.hpp
Working/Source/Utils/: collection.hpp
Working/Util/: Debug-Macros.hpp  DebugCallback.cpp  DebugCallback.hpp  Log.cpp  Log.hpp  ModernTypes.h  ansi.h
Working/Vulkan/: Shaders.cpp  Shaders.hpp  VulkanCommand.cpp  VulkanCommand.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanQueueUtils.cpp  VulkanQueueUtils.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanSwapchainSupportDetails.h
